--- a/1.2 pytorch/1.2.6 pytorch中的数据加载.md
+++ b/1.2 pytorch/1.2.6 pytorch中的数据加载.md
@@ -88,6 +88,9 @@ class CifarDataset(Dataset):
     def __len__(self):
         return self.df.shape[0]
 ```
+或者
+![image](https://user-images.githubusercontent.com/47971561/149646243-c42490ee-e701-4b19-9af2-1e6b00689a13.png)
+
 
 之后对Dataset进行实例化，可以跌倒获取其中的数据
 
