--- a/1.2 pytorch/1.2.6 pytorch中的数据加载.md
+++ b/1.2 pytorch/1.2.6 pytorch中的数据加载.md
@@ -91,6 +91,7 @@ class CifarDataset(Dataset):
 或者
 
 ![image](https://user-images.githubusercontent.com/47971561/149646243-c42490ee-e701-4b19-9af2-1e6b00689a13.png)
+取出来是label和content的元组
 
 
 之后对Dataset进行实例化，可以跌倒获取其中的数据
